# cinescope

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  db.py  embedder.py  main.py  parsers.py  retrieval.py  schemas.py
eval/: baseline.json
eval/results/: 395755a21403.json
pipeline/: __init__.py  checkpoints.py  cli.py  config.py  download.py  envfile.py  sampling.py  scoring.py  spark_utils.py  tmdb_client.py
pipeline/jobs/: __init__.py  cf.py  embed.py  eval_gate.py  evaluate.py  hydrate.py  index.py  ingest.py
scripts/: env.sh
tests/: conftest.py  test_api_app.py  test_api_embedder.py  test_api_parsers.py  test_api_retrieval.py  test_api_schemas.py  test_bayes.py  test_checkpoints.py  test_download.py  test_embed.py  test_envfile.py  test_eval_gate.py  test_eval_metrics.py  test_eval_split.py  test_index.py  test_sampling.py  test_scoring.py  test_spark_utils_env.py  test_tmdb_client.py
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
web/scripts/: screenshots.mjs
web/src/: App.tsx  index.css  main.tsx
web/src/components/: DetailDrawer.tsx  Interpretation.tsx  Poster.tsx  ResultCard.tsx  SearchBar.tsx  WhySignals.tsx
web/src/lib/: api.ts  spec.ts  types.ts
