[project]
name = "cinescope"
version = "0.1.0"
description = "CineScope — semantic movie discovery engine (PySpark pipeline, FastAPI, pgvector, React)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pgvector>=0.5.0",
    "psycopg[binary]>=3.3.4",
    "pyarrow>=25.0.0",
    "pyspark>=3.5,<4",
    "sentence-transformers>=5.6.0",
    # direct dep (not just via sentence-transformers) so the pytorch-cpu index
    # source below applies — uv sources only cover declared dependencies
    "torch>=2.6",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8",
]

[project.scripts]
pipeline = "pipeline.cli:main"

# CPU-only torch on Linux (CI): the default PyPI wheels drag in the full CUDA
# toolkit (~5 GB) that sentence-transformers never needs there. Windows PyPI
# wheels are already CPU-only, so local resolution is unaffected.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
